--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,9 +49,9 @@ jobs:
     - name: jar 파일 실행
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.DEVELOP_USERNAME }}@${{ secrets.DEVELOP_HOST }} << EOF
-          pkill -f 'ci_cd_test-0.0.1-SNAPSHOT.jar' || true
+          pkill -f 'spring_ci_cd-0.0.1-SNAPSHOT.jar' || true
           cd ~/app/ci_cd_test
-          nohup java -jar -Dspring.profiles.active=develop ci_cd_test-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
+          nohup java -jar -Dspring.profiles.active=develop spring_ci_cd-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
         EOF
       env:
         SSH_PRIVATE_KEY: ${{ secrets.DEVELOP_SSH_KEY }}
