--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,14 +36,14 @@ jobs:
       if: always()
       with:
         files: '**/build/test-results/test/TEST-*.xml'
-        github_token: ${{ github.token }}
+        github_token: ${{ secrets.GIT_TOKEN }}
         
     - name: 테스트 실패 Lines 등록
       uses: mikepenz/action-junit-report@v3
       if: always()
       with:
         report_paths: '**/build/test-results/test/TEST-*.xml'
-        github_token: ${{ github.token }}
+        github_token: ${{ secrets.GIT_TOKEN }}
 
     - name: SSH Agent 설정
       uses: webfactory/ssh-agent@v0.5.3
