--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,7 +6,9 @@ on:
   pull_request:
     branches: [ "master" ]
 
-permissions: write-all
+permissions:
+  contents: read
+  checks: write
 
 jobs:
   build:
@@ -35,7 +37,7 @@ jobs:
       if: always()
       with:
         files: '**/build/test-results/test/TEST-*.xml'
-        github_token: ${{ secrets.GIT_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: 테스트 실패 Lines 등록
       uses: mikepenz/action-junit-report@v3
