--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,14 +37,14 @@ jobs:
       if: always()
       with:
         files: '**/build/test-results/test/TEST-*.xml'
-#        github_token: ${{ GITHUB_TOKEN }}
+        github_token: ${{ GITHUB_TOKEN }}
         
     - name: 테스트 실패 Lines 등록
       uses: mikepenz/action-junit-report@v3
       if: always()
       with:
         report_paths: '**/build/test-results/test/TEST-*.xml'
-#        github_token: ${{ secrets.GIT_TOKEN }}
+        github_token: ${{ GITHUB_TOKEN }}
 
     - name: SSH Agent 설정
       uses: webfactory/ssh-agent@v0.5.3
